syntax = "proto2";

package sf.solana.block_stats.v1;


message BlockStats {
  required uint64 block_slot = 1;
  required uint64 block_time = 2;
  required string block_date = 3;
  required uint64 height = 4;
  required string hash = 5;
  required uint64 total_transactions = 6;
  required uint64 successful_transactions = 7;
  required uint64 failed_transactions = 8;
  required uint64 total_vote_transactions = 9;
  required uint64 total_non_vote_transactions = 10;
  required uint64 successful_vote_transactions = 11;
  required uint64 successful_non_vote_transactions = 14;
  required uint64 failed_non_vote_transactions = 15;
  required uint64 parent_slot = 16;
  required string previous_block_hash = 17;
  repeated Reward block_rewards = 18;


}


message Reward {
  required string pubkey = 1;
  required uint64 lamports = 2;
  required uint64 post_balance = 3;
  required uint64 reward_type = 4;
  required string commission = 5;

}


